# cg-work

./: .gitmodules  CMakeLists.txt  CMakeLists.txt~  README.markdown
problem1-30_03_13/: CMakeLists.txt  CMakeLists.txt~  main.cpp  problem1  problem_description.txt
problem1-30_03_13/nbproject/: configurations.xml  project.xml
problem1-30_03_13/nbproject/private/: Default.properties  configurations.xml
